// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CopyrightStatement /> handles invalid new-testament data 1`] = `
<DocumentFragment>
  <div
    class="copyright-content"
  >
    <div
      class="cp-section"
    >
      <p>
        <span>
          The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <p>
        <span>
          The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <p>
        <span>
          Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
        <span>
          Audio: ℗ 2009 Hosanna
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <p>
        <span>
          Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
        <span>
          Audio: ℗ 2009 Hosanna
        </span>
        <br />
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CopyrightStatement /> handles invalid old-testament data 1`] = `
<DocumentFragment>
  <div
    class="copyright-content"
  >
    <div
      class="cp-section"
    >
      <p>
        <span>
          The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <p>
        <span>
          The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <p>
        <span>
          Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
        <span>
          Audio: ℗ 2009 Hosanna
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <p>
        <span>
          Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
        <span>
          Audio: ℗ 2009 Hosanna
        </span>
        <br />
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CopyrightStatement /> handles old-testament with no messages 1`] = `
<DocumentFragment>
  <div
    class="copyright-content"
  >
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        href="https://www.crossway.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Crossway"
          class="image-landscape"
          src="https://images.bible.cloud/logo/crossway.svg"
        />
      </a>
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        class="org-name"
        rel="noopener"
        target="_blank"
      >
        Good News Publishers
      </a>
    </div>
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        href="https://www.crossway.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Crossway"
          class="image-landscape"
          src="https://images.bible.cloud/logo/crossway.svg"
        />
      </a>
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        class="org-name"
        rel="noopener"
        target="_blank"
      >
        Good News Publishers
      </a>
    </div>
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible audio is brought to you by:
        </span>
      </h3>
      <a
        href="https://www.crossway.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Crossway"
          class="image-landscape fcbh-copyright-logo"
          src="https://images.bible.cloud/logo/crossway.svg"
        />
      </a>
      <h3>
        <span>
          This Bible audio is brought to you by:
        </span>
      </h3>
      <a
        class="org-name"
        rel="noopener"
        target="_blank"
      >
        Good News Publishers
      </a>
    </div>
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible audio is brought to you by:
        </span>
      </h3>
      <a
        href="https://www.crossway.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Crossway"
          class="image-landscape fcbh-copyright-logo"
          src="https://images.bible.cloud/logo/crossway.svg"
        />
      </a>
      <h3>
        <span>
          This Bible audio is brought to you by:
        </span>
      </h3>
      <a
        class="org-name"
        rel="noopener"
        target="_blank"
      >
        Good News Publishers
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CopyrightStatement /> renders new testament correctly 1`] = `
<DocumentFragment>
  <div
    class="copyright-content"
  >
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        href="https://www.crossway.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Crossway"
          class="image-landscape"
          src="https://images.bible.cloud/logo/crossway.svg"
        />
      </a>
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        class="org-name"
        rel="noopener"
        target="_blank"
      >
        Good News Publishers
      </a>
      <p>
        <span>
          The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        href="https://www.crossway.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Crossway"
          class="image-landscape"
          src="https://images.bible.cloud/logo/crossway.svg"
        />
      </a>
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        class="org-name"
        rel="noopener"
        target="_blank"
      >
        Good News Publishers
      </a>
      <p>
        <span>
          The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible audio is brought to you by:
        </span>
      </h3>
      <a
        href="http://www.fcbh.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Faith Comes By Hearing"
          class="image-landscape fcbh-copyright-logo"
          src="https://bible.cloud/images/logo/FCBH_Color.svg"
        />
      </a>
      <p>
        <span>
          Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
        <span>
          Audio: ℗ 2009 Hosanna
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible audio is brought to you by:
        </span>
      </h3>
      <a
        href="http://www.fcbh.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Faith Comes By Hearing"
          class="image-landscape fcbh-copyright-logo"
          src="https://bible.cloud/images/logo/FCBH_Color.svg"
        />
      </a>
      <p>
        <span>
          Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
        <span>
          Audio: ℗ 2009 Hosanna
        </span>
        <br />
      </p>
    </div>
  </div>
</DocumentFragment>
`;

exports[`<CopyrightStatement /> renders nothing when no copyright data 1`] = `
<DocumentFragment>
  <div
    class="copyright-content"
  />
</DocumentFragment>
`;

exports[`<CopyrightStatement /> renders old testament correctly 1`] = `
<DocumentFragment>
  <div
    class="copyright-content"
  >
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        href="https://www.crossway.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Crossway"
          class="image-landscape"
          src="https://images.bible.cloud/logo/crossway.svg"
        />
      </a>
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        class="org-name"
        rel="noopener"
        target="_blank"
      >
        Good News Publishers
      </a>
      <p>
        <span>
          The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        href="https://www.crossway.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Crossway"
          class="image-landscape"
          src="https://images.bible.cloud/logo/crossway.svg"
        />
      </a>
      <h3>
        <span>
          This Bible text is brought to you by:
        </span>
      </h3>
      <a
        class="org-name"
        rel="noopener"
        target="_blank"
      >
        Good News Publishers
      </a>
      <p>
        <span>
          The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible audio is brought to you by:
        </span>
      </h3>
      <a
        href="http://www.fcbh.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Faith Comes By Hearing"
          class="image-landscape fcbh-copyright-logo"
          src="https://bible.cloud/images/logo/FCBH_Color.svg"
        />
      </a>
      <p>
        <span>
          Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
        <span>
          Audio: ℗ 2009 Hosanna
        </span>
        <br />
      </p>
    </div>
    <div
      class="cp-section"
    >
      <h3>
        <span>
          This Bible audio is brought to you by:
        </span>
      </h3>
      <a
        href="http://www.fcbh.org"
        rel="noopener"
        target="_blank"
      >
        <img
          alt="Copyright owners logo: Faith Comes By Hearing"
          class="image-landscape fcbh-copyright-logo"
          src="https://bible.cloud/images/logo/FCBH_Color.svg"
        />
      </a>
      <p>
        <span>
          Text: The ESV Bible® (The Holy Bible, English Standard Version®) Copyright © 2001 by Crossway, a publishing ministry of Good News Publishers. ESV® Text Edition: 2007. All rights reserved.
        </span>
        <br />
        <span>
          English Standard Version, ESV, and the ESV logo are registered trademarks of Good News Publishers.  Used by permission.
        </span>
        <br />
        <span>
          Audio: ℗ 2009 Hosanna
        </span>
        <br />
      </p>
    </div>
  </div>
</DocumentFragment>
`;
